[gd_scene load_steps=9 format=3 uid="uid://c5y4pbp6xhtip"]

[ext_resource type="Script" uid="uid://vvy48vb60a2t" path="res://scenes/level/level.gd" id="1_h3e3j"]
[ext_resource type="Texture2D" uid="uid://dxrkqjnxqsrgt" path="res://sprites/level_menu.webp" id="2_hnne4"]
[ext_resource type="Texture2D" uid="uid://1k07m5dcwc81" path="res://sprites/confetti.webp" id="2_qkmgm"]
[ext_resource type="Texture2D" uid="uid://cpywkvxj1lupr" path="res://sprites/repository.webp" id="3_hnne4"]
[ext_resource type="PackedScene" uid="uid://b07ds2x36vdee" path="res://scenes/grabber/grabber.tscn" id="4_hnne4"]
[ext_resource type="PackedScene" uid="uid://c85hv7ynsy5k" path="res://scenes/gui/level_menu/level_menu.tscn" id="6_vpf64"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xv074"]
texture = ExtResource("3_hnne4")
texture_margin_left = 25.0
texture_margin_top = 25.0
texture_margin_right = 25.0
texture_margin_bottom = 25.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qkmgm"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(360, -50, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 200.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
color = Color(1, 0, 0, 1)
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="Level" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_h3e3j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 75

[node name="InfoBar" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="LevelInfo" type="Label" parent="MarginContainer/InfoBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
vertical_alignment = 1

[node name="LevelMenuButton" type="TextureButton" parent="MarginContainer/InfoBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("2_hnne4")

[node name="Board" type="Node2D" parent="MarginContainer"]
unique_name_in_owner = true
position = Vector2(0, 175)

[node name="BoardSlots" type="Node2D" parent="MarginContainer/Board"]
unique_name_in_owner = true

[node name="Connections" type="Node2D" parent="MarginContainer/Board"]
unique_name_in_owner = true

[node name="Repository" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_xv074")

[node name="RepositorySlots" type="HFlowContainer" parent="MarginContainer/Repository"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
last_wrap_alignment = 1

[node name="Grabber" parent="." instance=ExtResource("4_hnne4")]
unique_name_in_owner = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = 4
position = Vector2(360, 0)
emitting = false
amount = 200
texture = ExtResource("2_qkmgm")
lifetime = 10.0
visibility_rect = Rect2(-360, 0, 720, 1280)
process_material = SubResource("ParticleProcessMaterial_qkmgm")

[node name="LevelMenu" parent="." instance=ExtResource("6_vpf64")]
unique_name_in_owner = true
z_index = 5
layout_mode = 1

[connection signal="pressed" from="MarginContainer/InfoBar/LevelMenuButton" to="." method="_on_level_menu_button_pressed"]
[connection signal="move_completed" from="Grabber" to="." method="_on_grabber_move_completed"]
[connection signal="menu_closed" from="LevelMenu" to="." method="_on_level_menu_menu_closed"]
[connection signal="quit_pressed" from="LevelMenu" to="." method="_on_level_menu_quit_pressed"]
[connection signal="restart_pressed" from="LevelMenu" to="." method="_on_level_menu_restart_pressed"]
